[tool.poetry]
name = "Rzkais"
version = "0.1.0"
description = "Script for generating Telegram Session in telethon or pyrogram"
authors = ["Rzkais <nangkinang676@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
Telethon = "^1.21.1"
TgCrypto = "^1.2.2"
Pyrogram = "^1.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
